# neural_networks_playground

./: CMakeLists.txt  conan_config.cmake  image.hpp  image_recognition_test.cpp  matrix.hpp  mnist_reader.hpp  mnist_reader_test.cpp  network.hpp  network_runtime.hpp  network_test.cpp  picture_printer.cpp
cmake/: add_test.cmake
